-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Improper use of negative value
The negative value may be unexpected by later operations, causing incorrect computations. Negative value can be returned from function is not being checked before being used improperly
/src/mongo/db/modules/enterprise/src/fcbis/file_copy_based_initial_syncer.cpp:900: NEGATIVE_RETURNS 120851 Assigning: "fileSize" = "metadata[mongo::StringData("fileSize")].safeNumberLong()".