SERVER-60380 Fix coverity analysis defect 120851: Improper use of negative value

GitOrigin-RevId: bc042697788af8bc397a677f83040163c8c00df9